# mootlib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  markets.csv.encrypted  parse_all.py  pyproject.toml  requirements.txt  ruff.toml
.cursor/rules/: linting-rule.mdc
.github/workflows/: lint.yml  publish.yml  release.yml  run_main.yml  test.yml
mootlib/: __init__.py
mootlib/embeddings/: embedding_utils.py  question_matcher.py  remote_cache.py  visualize_embeddings.py
mootlib/scrapers/: __init__.py  aggregate.py  common_markets.py  gjopen.py  manifold_markets.py  manimarket.py  metaculus.py  polymarket_gamma.py  predictit.py
mootlib/utils/: config.py  encription.py  encryption.py
scripts/: checkout_pooled.py
tests/: __init__.py  test_gjopen.py
