[project]
name = "mootlib"
version = "0.1.0"
description = "A library for scraping and analyzing forecasting markets"
authors = [
    { name = "Luigi Petrucco", email = "luigi.petrucco@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["forecasting", "markets", "scraping", "prediction"]
dependencies = [
    "aiohttp>=3.9.3",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.2",
    "openai>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "mypy>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/vigji/mootlib"
Repository = "https://github.com/vigji/mootlib.git"
Documentation = "https://github.com/vigji/mootlib"
"Bug Tracker" = "https://github.com/vigji/mootlib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mootlib"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

# Exclude scripts directory from package checks
exclude = ["scripts/*"]

[tool.ruff.lint]
# Select all rules by default
select = ["ALL"]

# Ignore rules that conflict with the formatter
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mootlib --cov-report=term-missing" 